--- a/content/posts/2020-01-01-my-first-post-using-novela-by-narative/index.mdx
+++ b/content/posts/2020-01-01-my-first-post-using-novela-by-narative/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: My first post using Novela by Narative
-author: Dennis Brotzky
-date: 2019-04-30
+title: Here we go again!
+author: Tobias Busch
+date: 2020-01-10
 hero: ./images/hero.jpg
-excerpt: With the growing community interest in Gatsby, we hope to create more resources that make it easier for anyone to grasp the power of this incredible tool.
+excerpt: This is just a placeholder for better things to come.
 ---
 
 My first post using `@narative/gatsby-theme-novela`. Novela is built by the team at [Narative](https://narative.co), and built for everyone that loves the web.
