start converting old posts

--- a/post_src/posts/2020-01-11-theres-a-package-for-that-1/index.Rmd
+++ b/post_src/posts/2020-01-11-theres-a-package-for-that-1/index.Rmd
@@ -9,15 +9,19 @@ tags:
 hero: "./images/hero.png"
 excerpt: Some R packages will make your computer scream. Quite literally.
 slug: theres-an-r-package-for-that-ep1-making-noise
-
 ---
+
+```{r include=FALSE}
+knitr::opts_chunk$set(eval = FALSE)
+```
+
 ## There's an R package for that!
 
 One of R's strengths is the vast amount of 3rd party code--packages--that can expand its functionality. There are over 15.000 packages on [CRAN](https://cran.r-project.org/), R's beloved package repository, and many more packages can be found on GitHub, Bioconductor, Neuroconductor, etc.
 
 This series of blog post will unearth some of the lesser known gems: Packages that solve a very specific, perhaps obscure, problem. Packages that will make your life easier or make you scratch your head in wonder. Packages that are useful and packages that are just weird. We will have a look around the ginormous toolshed that is the R package ecosystem. Each episode will highlight another package, the power of R, and its amazing community.
 
-***
+------------------------------------------------------------------------
 
 ## Make R scream with "beepr"
 
@@ -25,7 +29,7 @@ Today we will look at packages that let R play notification sounds. This way R c
 
 The `beepr` package is a straightforward way to make R play a sound. Here's how to install the package and play a sound:
 
-```python
+```{r}
 install.packages("beepr")
 library(beepr)
 
@@ -35,13 +39,13 @@ beep()
 
 You can change the default "ping" sound to one of 9 alternatives, including the infamous [Wilhelm scream](https://en.wikipedia.org/wiki/Wilhelm_scream).
 
-```python
+```{r}
 beep(sound = "wilhelm")
 ```
 
 `beepr` can also notify you when R throws an error. Just wrap your error-prone code in the `beep_on_error()` function like this:
 
-```python
+```{r}
 beep_on_error(stop('I made a huge mistake!'))
 ```
 
@@ -49,7 +53,9 @@ beep_on_error(stop('I made a huge mistake!'))
 
 We can use beepr to build ourselves a rudimentary [Pomodoro timer](https://en.wikipedia.org/wiki/Pomodoro_Technique). Create a new R script `pomodoro_timer.R` and add the following code (I'm assuming you are using RStudio, otherwise the notification dialog will not work).
 
-```python
+```{r}
+# ./pomodoro_timer.R
+
 library(beepr) 
 
 counter = 0 # amount of finished pomodoros
@@ -84,7 +90,7 @@ You can learn more about `beepr` [here](https://github.com/rasmusab/beepr).
 
 The `BRRR` package's main (and only?) function `skrrrahh()` plays sound bites from different rappers. There are 52 different ad-libs for all sorts of situations. To use the package run this:
 
-```python
+```{r}
 if(!require(devtools)) {install.packages("devtools")}
 devtools::install_github("brooke-watson/BRRR")
 library("BRRR")
@@ -94,7 +100,7 @@ skrrrahh("kendrick")
 
 To have your favourite artists cheer you on while you are coding, run the following code as an RStudio background job like we did above:
 
-```python
+```{r}
 while (TRUE) {
   Sys.sleep(sample(5:60)) # randomly pause 5-60 seconds between cheers
   skrrrahh(-1) # a non-existing number will produce a random ad-lib
@@ -107,13 +113,13 @@ You can learn more about `BRRR` [here](https://github.com/brooke-watson/BRRR).
 
 If you are on a Mac you can make R rap without any packages at all. Simply use the operating system's built-in text-to-speech engine:
 
-```python
+```{r}
 system("say And if you don\\'t know, now you know!") 
 # note the double-backslash needed to escaope the special character
 ```
 
-***
+------------------------------------------------------------------------
 
-Has Biggie become an integral part of your analysis workflow or do you know other packages that can make R sing, dance, or swallow a sword? Tell me about it! [@drtobilotti](https://twitter.com/drtobilotti)
+Has Biggie become an integral part of your analysis workflow or do you know other packages that can make R sing, dance, or swallow a sword? Tell me about it! [\@tobilottii](https://twitter.com/tobilottii)
 
-_Photo by Clem Onojeghuo on Unsplash_
+*Photo by Clem Onojeghuo on Unsplash*
